figured out the soltion to part two, got the left axis on the left and the data is updating correctly; I still can't figure out the text overlay part, last stretch here

--- a/D3_data_journalism/part_two/assets/css/d3Style.css
+++ b/D3_data_journalism/part_two/assets/css/d3Style.css
@@ -25,6 +25,7 @@
 
 /* font size dependent on radius, see app.js */
 .stateText {
+  font-size: 7pt;
   font-family: sans-serif;
   fill: #fff;
   text-anchor: middle;
